--- a/website/src/app/pages/welcome/welcome.component.html
+++ b/website/src/app/pages/welcome/welcome.component.html
@@ -1,1 +1,29 @@
-<p>welcome works!</p>
+<h1>Witaj świecie sztucznej inteligencji!</h1>
+
+<h3>Nie ważne czy jesteś studentem, badaczem, czy pasjonatem sztucznej inteligencji, to właściwe miejsce, aby zgłębić tajniki i zrozumieć rekurencyjne sieci neuronowe</h3>
+
+
+<h2>Co znajdziesz na naszej stronie?</h2>
+Wprowadzenie do teorii RNN:
+Dowiesz się, jak działają RNN,
+coś o ich zastosowaniach i historii. 
+
+Praktyczne zastosowania: 
+Od konfiguracji środowiska do faktycznej sieci neuronowej od zera w języku Python
+
+<h2>Dlaczego warto?</h2>
+Sztuczna inteligencja ogarnia coraz więcej aspektów naszego życia,
+sieci RNN są stosunkowo prostym tematem w skomplikowanej dziedzinie,
+co czyni je dobrym pomysłem na start. 
+Dzięki nim możemy lepiej zrozumieć bardziej skomplikowane struktury sekwencyjne i wzorce,
+co ma ogromne znaczenie dla tworzenia bardziej zaawansowanych AI.
+
+<div class="bottom-nav">
+    <div></div>
+    <a routerLink="/what-are-RNN">
+        <button nz-button nzType="primary" click="routerlink">
+            Dalej
+            <span nz-icon nzType="right"></span>
+        </button>
+    </a>    
+</div>
