--- a/website/src/app/layout/layout.component.html
+++ b/website/src/app/layout/layout.component.html
@@ -8,7 +8,7 @@
       <div class="sidebar-logo" >
         <a routerLink="/welcome">
           <img src="https://svgcrown.com/file/pug/1.png" alt=":(">
-          <h1>RNN ABC</h1>
+          <h1>AI BC</h1>
         </a>
       </div>
       <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
@@ -25,13 +25,10 @@
             </li>
           </ul>
         </li>
-        <li nz-submenu nzOpen nzTitle="W praktyce" nzIcon="bulb">
+        <li nz-submenu nzOpen nzTitle="Praktyka" nzIcon="bulb">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a>Przygotowanie</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Proste RNN</a>
+              <a routerLink="practice">Proste RNN</a>
             </li>
           </ul>
         </li>
