--- a/website/src/app/pages/practice/practice.component.html
+++ b/website/src/app/pages/practice/practice.component.html
@@ -1,14 +1,5 @@
 <div class="container">
     <div class="code">
-        <code></code>
-    </div>
-    <div class="code">
-        <code></code>
-    </div>
-    <div class="code">
-        <code></code>
-    </div>
-    <div class="code">
-        <code></code>
+        <code title="Cały kod" [canBeRun]="true" [value]="fullCode"></code>
     </div>
 </div>
