--- a/website/src/app/pages/practice/practice.component.html
+++ b/website/src/app/pages/practice/practice.component.html
@@ -1,5 +1,22 @@
-<div class="container">
-    <div class="code">
-        <code title="RNN" [canBeRun]="true" [value]="fullCode"></code>
+<div class="page-container">
+  <h2>Witaj w części praktycznej, wybierz preferowany tryb nauki</h2>
+  <div class="option-container">
+    <div class="option">
+      <h1>RNN od zera</h1>
+      <p>
+        W tej części przeprowadzę cię krok po kroku przez proces tworzenia
+        prostej sieci RNN w pythonie.
+      </p>
+      <button nz-button nzType="primary" routerLink="/from-scrach">
+        Zaczynamy
+      </button>
     </div>
+    <div class="option">
+      <h1>Gotowy kod</h1>
+      <p>
+        Jeśi chcesz pominąć ten etap, możesz od razu przejść do gotowego kodu.
+      </p>
+      <button nz-button nzType="primary" routerLink="/full-code">Pomiń</button>
+    </div>
+  </div>
 </div>
