--- a/website/src/app/pages/welcome/welcome.component.html
+++ b/website/src/app/pages/welcome/welcome.component.html
@@ -1,29 +1,32 @@
-<h1>Witaj świecie sztucznej inteligencji!</h1>
+<div class="page-container">
+  <h1>Witaj świecie sztucznej inteligencji!</h1>
+  <h3>
+    Nie ważne czy jesteś studentem czy pasjonatem sztucznej inteligencji, to
+    właściwe miejsce, aby zgłębić tajniki i zrozumieć rekurencyjne sieci
+    neuronowe
+  </h3>
+  <h2>Co oferujemy?</h2>
+  Dowiesz się, jak działają RNN, czym różnią się od zwykłych sieci neuronowych,
+  jakie mają wady i zalety. Przedstawimy Ci przykłady zastosowań i wskażemy
+  następny potencjalny krok w kierunku zrozumienia bardziej złożonych modeli. Na
+  sam koniec w części praktycznej będziesz mieć możliwość stworzenia i
+  przetestowania krok po kroku własnej sieci neuronowej, i to bez opuszczania
+  przeglądarki.
 
-<h3>Nie ważne czy jesteś studentem, badaczem, czy pasjonatem sztucznej inteligencji, to właściwe miejsce, aby zgłębić tajniki i zrozumieć rekurencyjne sieci neuronowe</h3>
+  <h2>Dlaczego warto?</h2>
+  Sztuczna inteligencja ogarnia coraz więcej aspektów naszego życia, a sieci
+  neuronowe są podstawowym składnikiem wielu potężnych modeli. Jeśli chcesz być
+  aktywną częścią rozwoju AI i być może rozpocząć karierę w tej dziedzinie to
+  dokładne zrozumienie RNN i jej konceptów jest kluczowe i pomoże Ci zrozumieć
+  bardziej skomplikowane modele
 
-
-<h2>Co znajdziesz na naszej stronie?</h2>
-Wprowadzenie do teorii RNN:
-Dowiesz się, jak działają RNN,
-coś o ich zastosowaniach i historii. 
-
-Praktyczne zastosowania: 
-Od konfiguracji środowiska do faktycznej sieci neuronowej od zera w języku Python
-
-<h2>Dlaczego warto?</h2>
-Sztuczna inteligencja ogarnia coraz więcej aspektów naszego życia,
-sieci RNN są stosunkowo prostym tematem w skomplikowanej dziedzinie,
-co czyni je dobrym pomysłem na start. 
-Dzięki nim możemy lepiej zrozumieć bardziej skomplikowane struktury sekwencyjne i wzorce,
-co ma ogromne znaczenie dla tworzenia bardziej zaawansowanych AI.
-
-<div class="bottom-nav">
+  <div class="bottom-nav">
     <div></div>
     <a routerLink="/what-are-RNN">
-        <button nz-button nzType="primary" click="routerlink">
-            Dalej
-            <span nz-icon nzType="right"></span>
-        </button>
-    </a>    
+      <button nz-button nzType="primary" click="routerlink">
+        Czym są sieci RNN
+        <span nz-icon nzType="right"></span>
+      </button>
+    </a>
+  </div>
 </div>
