--- a/website/src/app/pages/practice/practice.component.scss
+++ b/website/src/app/pages/practice/practice.component.scss
@@ -1,12 +1,16 @@
-.container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
+.option {
+  border-radius: 25px;
+  border: 1px solid black;
+  padding: 25px;
+  width: 40%;
+  text-align: center;
 }
 
-.code {
-    width: 100%;
-    height: 95%;
-    padding: 3px;
+.option-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  padding: 15px;
+  gap: 15px;
 }
