--- a/website/src/styles.scss
+++ b/website/src/styles.scss
@@ -1,31 +1,49 @@
-h1, h2, h3 {
-    color: #444;
+h1,
+h2,
+h3 {
+  color: #444;
 }
 
 .bottom-nav {
-    padding: 40px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+  padding: 40px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .image-container {
-    width: 100%;
-    align-items: center;
-    text-align: center;
+  width: 100%;
+  align-items: center;
+  text-align: center;
 }
 
 h1 {
-    font-size: 64px;
-    font-weight: bold;
+  font-size: 64px;
+  font-weight: bold;
 }
 
 h2 {
-    font-size: 32px;
-    font-weight: bold;
+  font-size: 32px;
+  font-weight: bold;
 }
 
 h3 {
-    font-size: 24px;
-    font-weight: bold;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 1000px) {
+  .page-container {
+    h1 {
+      font-size: 32px;
+    }
+
+    h2 {
+      font-size: 24px;
+    }
+
+    h3 {
+      font-size: 16px;
+    }
+  }
 }
