--- a/website/src/app/pages/for-what/for-what.component.html
+++ b/website/src/app/pages/for-what/for-what.component.html
@@ -1,1 +1,33 @@
-<p>for-what works!</p>
+<div class="page-container">
+  <h1>Zastosowanie</h1>
+  <h2>
+    RNN są używane ze względu na zdolność do obsługi danych sekwencyjnych w
+    takich dziedzinach jak:
+  </h2>
+  <ul>
+    <li>
+      <h3>Przetwarzanie języka naturalnego</h3>
+    </li>
+    <li>
+      <h3>Rozpoznawanie mowy</h3>
+    </li>
+    <li>
+      <h3>Automatyczne generowanie tekstu</h3>
+    </li>
+  </ul>
+
+  <div class="bottom-nav">
+    <a routerLink="/pros-cons">
+      <button nz-button nzType="primary">
+        <span nz-icon nzType="left"></span>
+        Wady i zalety
+      </button>
+    </a>
+    <a routerLink="/what-next">
+      <button nz-button nzType="primary">
+        Co dalej?
+        <span nz-icon nzType="right"></span>
+      </button>
+    </a>
+  </div>
+</div>
