--- a/website/src/app/pages/pros-cons/pros-cons.component.html
+++ b/website/src/app/pages/pros-cons/pros-cons.component.html
@@ -57,13 +57,13 @@
   </ul>
 
   <div class="bottom-nav">
-    <a routerLink="/welcome">
+    <a routerLink="/what-are-RNN">
       <button nz-button nzType="primary">
         <span nz-icon nzType="left"></span>
         Czym są RNN
       </button>
     </a>
-    <a routerLink="/pros-cons">
+    <a routerLink="/for-what">
       <button nz-button nzType="primary">
         Zastosowanie
         <span nz-icon nzType="right"></span>
